# MESSENGER-MASCS-VIRS-geometry-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: download_processed_dataset.sh
data/raw/spice_kernels/: .gitignore  clone_ESA_DSK.sh
data/raw/spice_kernels/NASA/: .gitignore  msgr_2011_v10_110812_110812.tm  urls_messsp_1000_110812_110812.txt  wget_messsp_1000_110812_110812.sh
data/raw/test/mess-e_v_h-mascs-3-virs-cdr-caldata-v1/messmas_2101/data/ddr/ob2/virs/mascs20120402/vis/: virsvd_ob2_12093_181550.lbl
data/raw/test/mess-e_v_h-mascs-3-virs-cdr-caldata-v1/messmas_2101/data/ddr/ob3/virs/mascs20131104/vis/: virsvd_ob3_13308_015025.lbl
msgmascsgeo/: spicefuncs.py
notebooks/: SPICE_MASCS.ipynb  SPICE_MASCS.py
